@@ -51,7 +51,7 @@ template <typename T> struct PointCloud {
   // Since this is inlined and the "dim" argument is typically an immediate
   // value, the
   //  "if/else's" are actually solved at compile time.
-  inline T kdtree_get_pt(const size_t idx, int dim) const {
+  inline T kdtree_get_pt(const size_t idx, const size_t dim) const {
     if (dim == 0)
       return pts[idx].x;
     else if (dim == 1)
