@@ -88,7 +88,7 @@ void kdtree_demo(const size_t N)
 int main()
 {
 	// Randomize Seed
-	srand(time(NULL));
+	srand(static_cast<unsigned int>(time(nullptr)));
 	kdtree_demo<float>(1000000);
 	kdtree_demo<double>(1000000);
 	return 0;
