@@ -104,7 +104,7 @@ void kdtree_demo(const size_t N)
  int main()
 {
 	// Randomize Seed
-	srand(time(NULL));
+	srand(static_cast<unsigned int>(time(nullptr)));
 	kdtree_demo<float>(4);
 	kdtree_demo<double>(100000);
 	return 0;
