@@ -93,6 +93,6 @@ void kdtree_demo(const size_t nSamples, const size_t dim)
 int main()
 {
 	// Randomize Seed
-	srand(time(NULL));
-	kdtree_demo(1e3 /* samples */, SAMPLES_DIM /* dim */);
+	srand(static_cast<unsigned int>(time(nullptr)));
+	kdtree_demo(1000 /* samples */, SAMPLES_DIM /* dim */);
 }
